Fix overflow/scroll issue in drawers. #MBL-10866

--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -34,6 +34,7 @@
     visibility: hidden;
     display: none;
     background-color: @menu-list-item-bg-color;
+    overflow: auto;
 }
 
 .snapjs-left .left-drawer {
